Revamped IOC container. Can now register classes to be instantiated upon request (Factory registration). Improved algorithms (maybe).

--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9AC0062D-FA4F-40AE-9089-5F65F43122E9}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Core</RootNamespace>
+    <RootNamespace>SFuller.SharpGameLibs.Core</RootNamespace>
     <AssemblyName>Core</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
