--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -6,7 +6,7 @@
     <ProjectGuid>{9AC0062D-FA4F-40AE-9089-5F65F43122E9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <RootNamespace>SFuller.SharpGameLibs.Core</RootNamespace>
-    <AssemblyName>Core</AssemblyName>
+    <AssemblyName>SFuller.SharpGameLibs.Core</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
