--- a/UnityEditor/UnityEditor.csproj
+++ b/UnityEditor/UnityEditor.csproj
@@ -47,5 +47,9 @@
       <Name>Unity</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
